edits to add jdeps jdeprscan